--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,8 @@ path = "src/day02/day02.rs"
 name = "day03"
 path = "src/day03/day03.rs"
 
+[[bin]]
+name = "day04"
+path = "src/day04/day04.rs"
+
 [dependencies]
