--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,4 +41,8 @@ path = "src/day08/day08.rs"
 name = "day09"
 path = "src/day09/day09.rs"
 
+[[bin]]
+name = "day10"
+path = "src/day10/day10.rs"
+
 [dependencies]
