--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,4 +45,8 @@ path = "src/day09/day09.rs"
 name = "day10"
 path = "src/day10/day10.rs"
 
+[[bin]]
+name = "day11"
+path = "src/day11/day11.rs"
+
 [dependencies]
