--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,4 +49,8 @@ path = "src/day10/day10.rs"
 name = "day11"
 path = "src/day11/day11.rs"
 
+[[bin]]
+name = "day12"
+path = "src/day12/day12.rs"
+
 [dependencies]
