--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,4 +57,8 @@ path = "src/day12/day12.rs"
 name = "day13"
 path = "src/day13/day13.rs"
 
+[[bin]]
+name = "day14"
+path = "src/day14/day14.rs"
+
 [dependencies]
