--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,4 +61,8 @@ path = "src/day13/day13.rs"
 name = "day14"
 path = "src/day14/day14.rs"
 
+[[bin]]
+name = "day15"
+path = "src/day15/day15.rs"
+
 [dependencies]
