--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,4 +65,9 @@ path = "src/day14/day14.rs"
 name = "day15"
 path = "src/day15/day15.rs"
 
+[[bin]]
+name = "day16"
+path = "src/day16/day16.rs"
+
 [dependencies]
+regex = "1"
