--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,5 +69,9 @@ path = "src/day15/day15.rs"
 name = "day16"
 path = "src/day16/day16.rs"
 
+[[bin]]
+name = "day17"
+path = "src/day17/day17.rs"
+
 [dependencies]
 regex = "1"
