--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,5 +73,9 @@ path = "src/day16/day16.rs"
 name = "day17"
 path = "src/day17/day17.rs"
 
+[[bin]]
+name = "day18"
+path = "src/day18/day18.rs"
+
 [dependencies]
 regex = "1"
