--- a/Cargo.toml
+++ b/Cargo.toml
@@ -81,5 +81,9 @@ path = "src/day18/day18.rs"
 name = "day19"
 path = "src/day19/day19.rs"
 
+[[bin]]
+name = "day20"
+path = "src/day20/day20.rs"
+
 [dependencies]
 regex = "1"
