--- a/Cargo.toml
+++ b/Cargo.toml
@@ -85,5 +85,9 @@ path = "src/day19/day19.rs"
 name = "day20"
 path = "src/day20/day20.rs"
 
+[[bin]]
+name = "day21"
+path = "src/day21/day21.rs"
+
 [dependencies]
 regex = "1"
