--- a/Cargo.toml
+++ b/Cargo.toml
@@ -89,5 +89,9 @@ path = "src/day20/day20.rs"
 name = "day21"
 path = "src/day21/day21.rs"
 
+[[bin]]
+name = "day22"
+path = "src/day22/day22.rs"
+
 [dependencies]
 regex = "1"
