--- a/Cargo.toml
+++ b/Cargo.toml
@@ -93,5 +93,9 @@ path = "src/day21/day21.rs"
 name = "day22"
 path = "src/day22/day22.rs"
 
+[[bin]]
+name = "day23"
+path = "src/day23/day23.rs"
+
 [dependencies]
 regex = "1"
