--- a/Cargo.toml
+++ b/Cargo.toml
@@ -97,5 +97,9 @@ path = "src/day22/day22.rs"
 name = "day23"
 path = "src/day23/day23.rs"
 
+[[bin]]
+name = "day24"
+path = "src/day24/day24.rs"
+
 [dependencies]
 regex = "1"
