--- a/Cargo.toml
+++ b/Cargo.toml
@@ -101,5 +101,9 @@ path = "src/day23/day23.rs"
 name = "day24"
 path = "src/day24/day24.rs"
 
+[[bin]]
+name = "day25"
+path = "src/day25/day25.rs"
+
 [dependencies]
 regex = "1"
